--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,10 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <script
+      src="https://kit.fontawesome.com/a814f1073d.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <fml-root></fml-root>
